<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:id="@+id/myLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom = "16dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <!-- 第一部分，扫描按钮 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:orientation="vertical"
            >
            <Button
                android:id="@+id/scanButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/click_scan"
                app:icon="@drawable/baseline_qr_code_scanner_24"
                app:iconGravity="start" />

        </LinearLayout>

        <!-- 第二部分，当前扫描结果 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:orientation="horizontal"
        >
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/baseline_edit_note_24"
                android:contentDescription="@string/scan_icon"
                android:layout_gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/scan_result"
                android:textFontWeight="700"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:gravity="center_vertical"
                />
            <EditText
                android:id="@+id/scanResult"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:hint="@string/scan_result"
                android:autofillHints="name"
                android:enabled="false"
                android:focusable="false"
                android:inputType="text"
                android:focusableInTouchMode="false" />
        </LinearLayout>
        <!-- 第二部分，当前扫描结果 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/baseline_bluetooth_24"
                android:contentDescription="@string/tsc_bluetooth"
                android:layout_gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/tsc_bluetooth"
                android:textFontWeight="700"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:gravity="center_vertical"
                />
            <EditText
                android:id="@+id/tscWifi"
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:paddingStart = "16dp"
                android:paddingEnd = "16dp"
                android:hint="@string/bluetooth_address"
                android:autofillHints="name"
                android:enabled="false"
                android:focusable="false"
                android:inputType="text"
                android:focusableInTouchMode="false">
            </EditText>
            <Button
                android:id="@+id/openBTButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/open_setting"
                app:iconGravity="start" />
        </LinearLayout>

        <!-- 第四部分，历史结果显示 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingTop="8dp"
            android:paddingBottom="3dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:orientation="vertical"
        >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/history"
                android:textSize="20sp"
                android:gravity="center_vertical"
                android:drawableStart="@drawable/baseline_list_alt_24"
                />
            <ListView
                android:id="@+id/scanHistory"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@android:color/darker_gray"
                android:dividerHeight="1dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"/>

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>